--- a/Collective Learning for X-rays.ipynb
+++ b/Collective Learning for X-rays.ipynb
@@ -4,25 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will demonstrate the Collective Learning Framework in PySyft. First let's import some things and define some training parameters."
+    "In this notebook we will demonstrate the Collective Learning Framework in PySyft. First let's import some things and define some training parameters. The data needs to be downloaded from here: https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia. Put the unzipped data in this directory and set the value of data_dir below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7f3ac8c6d7b0>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from random import randint\n",
@@ -55,7 +44,7 @@
     "        self.n_hospitals = 5\n",
     "        self.vote_threshold = (self.n_hospitals - 1) // 2\n",
     "        self.train_ratio = 0.92\n",
-    "        self.data_dir = \"./data/chest_x-ray\"\n",
+    "        self.data_dir = \"./chest_xray\"\n",
     "        self.pos_weight = torch.tensor([0.27])  # there is about 1 normal to every 3 pneu\n",
     "        \n",
     "args = Arguments()\n",
@@ -71,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,34 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------\n",
-      "        Layer (type)               Output Shape         Param #\n",
-      "================================================================\n",
-      "            Conv2d-1         [-1, 32, 128, 128]             320\n",
-      "       BatchNorm2d-2         [-1, 32, 128, 128]              64\n",
-      "            Conv2d-3           [-1, 64, 32, 32]          18,496\n",
-      "       BatchNorm2d-4           [-1, 64, 32, 32]             128\n",
-      "            Linear-5                    [-1, 1]              65\n",
-      "================================================================\n",
-      "Total params: 19,073\n",
-      "Trainable params: 19,073\n",
-      "Non-trainable params: 0\n",
-      "----------------------------------------------------------------\n",
-      "Input size (MB): 0.06\n",
-      "Forward/backward pass size (MB): 9.00\n",
-      "Params size (MB): 0.07\n",
-      "Estimated Total Size (MB): 9.14\n",
-      "----------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
@@ -151,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
